--- a/css/tambahan.css
+++ b/css/tambahan.css
@@ -1,9 +1,15 @@
 /*bodi*/
-body{
+.bg-body{
 	margin:0;
 	padding:0;
 	font-family: sans-serif;
-	background: #98FB98;
+	background-color:#429654!important;
+}
+
+.kotak {
+    box-shadow: -6px -6px 9px rgba(0,0,0,0.4);
+    padding: 10px;
+    border: 1px dashed grey;
 }
 
 /*box untuk mengatur ukuran from box*/
@@ -44,34 +50,34 @@ body{
 	margin: 10px; 
 }
 
-/*box untuk mengatur icon*/
-.simbol-input{	
-	font-size: 15px;
-	display: flex;
-	align-items: center;
-	position: fixed;
-	border-radius: 25px;
-	bottom: 0;
-	left: 0;
-	width: 100%;
-	height: 105%;
-	padding-left: 100px;
-	pointer-events: none;
-}
+
 
 /*box untuk mengatur icon*/
 .simbol-input12{
-	font-size: 15px;
-	display: flex;
-	align-items: center;
-	position: fixed;
-	border-radius: 25px;
-	bottom: 0;
-	left: 0;
-	width: 100%;
-	height: 137%;
-	padding-left: 100px;
-	pointer-events: none;
-	/*color: #666666;*/
+    font-size: 15px;
+    display: flex;
+    align-items: center;
+    position: fixed;
+    border-radius: 7px;
+    /* bottom: 0; */
+    left: 0;
+    width: 100%;
+        margin-top: 10px;
+    /* height: 105%; */
+    padding-left: 546px;
 
+}
+/*box untuk mengatur icon*/
+.simbol-input{	
+    font-size: 15px;
+    display: flex;
+    align-items: center;
+    position: fixed;
+    border-radius: 7px;
+    /* bottom: 0; */
+    left: 0;
+    width: 100%;
+        margin-top: 10px;
+    /* height: 105%; */
+    padding-left: 546px;
 }
